k8s/clusters/k3sa/manifests/owncloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:10.15.3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: files
              mountPath: /mnt/data
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            exec:
              command: ["/usr/bin/healthcheck"]
            initialDelaySeconds: 45
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["/usr/bin/healthcheck"]
            initialDelaySeconds: 90
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: owncloud-files-pvc
