k8s/clusters/k3sa/manifests/owncloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: owncloud
