k8s/clusters/k3sa/manifests/owncloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: owncloud-ingress
  namespace: owncloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`owncloud.bigd.no`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: owncloud-service
          port: 8080
  tls:
    secretName: bigd-no-tls
